--- a/css/site.css
+++ b/css/site.css
@@ -2,6 +2,7 @@
     width: 250px;
     height: auto;
     border: 8px solid #FFEBCD;
+    border-radius: 8px;
 }
 p {
     font-family: Arial, Helvetica, sans-serif-sans;
@@ -9,4 +10,13 @@ p {
 }
 body {
     background-color: #6495ED
+}
+h1 {
+    text-align: center;
+    text-shadow: 2px 2px lightblue;
+    font-size: 65px;
+}
+h2 {
+    text-align: center;
+    font-size: 35px;
 }
