--- a/css/site.css
+++ b/css/site.css
@@ -20,3 +20,31 @@ h2 {
     text-align: center;
     font-size: 35px;
 }
+li {
+    float: center;
+    display: inline;
+}
+
+a {
+  display: block;
+  padding: 8px;
+  background-color: #5f9EA0;
+}
+li a {
+    display: block;
+    color: black;
+    font-size: 25px;
+    text-align: center;
+    padding: 14px 16px;
+}
+li a:hover {
+    background-color: #0000FF;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #333;
+  border: 8px solid #FFEBCD;
+  border-radius: 8px;
+}
