--- a/css/site.css
+++ b/css/site.css
@@ -3,6 +3,8 @@
     height: auto;
     border: 8px solid #FFEBCD;
     border-radius: 8px;
+    float: right;
+    padding: 10px;
 }
 p {
     font-family: Arial, Helvetica, sans-serif-sans;
@@ -19,32 +21,4 @@ h1 {
 h2 {
     text-align: center;
     font-size: 35px;
-}
-li {
-    float: center;
-    display: inline;
-}
-
-a {
-  display: block;
-  padding: 8px;
-  background-color: #5f9EA0;
-}
-li a {
-    display: block;
-    color: black;
-    font-size: 25px;
-    text-align: center;
-    padding: 14px 16px;
-}
-li a:hover {
-    background-color: #0000FF;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background-color: #333;
-  border: 8px solid #FFEBCD;
-  border-radius: 8px;
 }
